@@ -3,7 +3,7 @@ require File.dirname(__FILE__) + '/../test_helper'
 
 class WiStoreTest < Test::Unit::TestCase
 
-  fixtures :wi_stores, :store_permissions, :users, :groups
+  fixtures :wi_stores, :store_permissions, :users, :groups, :workitems
 
   def test_find_store_names
 
@@ -17,6 +17,10 @@ class WiStoreTest < Test::Unit::TestCase
     wl = Worklist.new(users(:alice))
 
     assert wl.permission("alpha").may_read?
+
+    assert_equal 4, wl.workitems.size
+    assert_equal 1, wl.workitems('alpha').size
+    assert_equal 1, wl.workitems('users').size
   end
 
   def test_bob
@@ -25,5 +29,22 @@ class WiStoreTest < Test::Unit::TestCase
 
     assert wl.permission("alpha").may_read?
     assert ( ! wl.permission("alpha").may_write?)
+
+    assert_equal 2, wl.workitems.size
+    assert_equal 1, wl.workitems('alpha').size
+    assert_equal 1, wl.workitems('users').size
   end
+
+  protected
+
+    #def snoop (wl)
+    #  p [ :user, wl.user.name ]
+    #  p [ :all, wl.workitems.collect { |wi| wi_to_h(wi) } ]
+    #  p [ :alpha, wl.workitems('alpha').collect { |wi| wi_to_h(wi) } ]
+    #  p [ :bravo, wl.workitems('bravo').collect { |wi| wi_to_h(wi) } ]
+    #end
+    #def wi_to_h (wi)
+    #    { :id => wi.id, :pn => wi.participant_name, :sn => wi.store_name }
+    #end
+
 end
